chore: add moment dependency

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "write-file-webpack-plugin": "4.2.0"
   },
   "dependencies": {
+    "moment": "2.19.2",
     "prop-types": "15.6.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
