--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "prop-types": "15.6.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
+    "react-json-tree": "0.11.0",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
     "redux-logger": "3.0.6",
