--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "start": "yarn clean && webpack-dev-server --inline --no-info",
-    "build": "yarn clean && webpack"
+    "build": "NODE_ENV=production yarn clean && webpack"
   },
   "repository": {
     "type": "git",
