--- a/example/package.json
+++ b/example/package.json
@@ -36,6 +36,7 @@
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
     "style-loader": "0.19.0",
+    "surge": "0.19.0",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4"
   },
