--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "7.0.0-beta.34",
+    "@babel/plugin-transform-modules-commonjs": "7.0.0-beta.34",
+    "@babel/polyfill": "7.0.0-beta.34",
+    "@babel/preset-env": "7.0.0-beta.34",
+    "@babel/preset-react": "7.0.0-beta.34",
+    "@babel/preset-stage-2": "7.0.0-beta.34",
+    "@babel/preset-typescript": "7.0.0-beta.34",
     "autoprefixer": "7.1.6",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
+    "babel-loader": "8.0.0-beta.0",
     "babel-plugin-react-css-modules": "3.3.2",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
     "core-js": "2.5.1",
     "css-loader": "0.28.7",
     "enzyme": "3.2.0",
