--- a/example/package.json
+++ b/example/package.json
@@ -16,12 +16,12 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
+    "@babel/core": "7.0.0-beta.34",
+    "@babel/preset-env": "7.0.0-beta.34",
+    "@babel/preset-react": "7.0.0-beta.34",
+    "@babel/preset-stage-2": "7.0.0-beta.34",
     "babel-plugin-react-css-modules": "3.3.2",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
+    "babel-loader": "8.0.0-beta.0",
     "core-js": "2.5.1",
     "css-loader": "0.28.7",
     "eslint": "4.10.0",
