--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.5.1",
     "extract-text-webpack-plugin": "3.0.2",
+    "fork-ts-checker-webpack-plugin": "0.2.9",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
     "identity-obj-proxy": "3.0.0",
@@ -54,6 +55,7 @@
     "raw-loader": "0.5.1",
     "react-test-renderer": "16.2.0",
     "style-loader": "0.19.0",
+    "typescript": "2.6.2",
     "webpack": "3.9.1",
     "webpack-chrome-extension-reloader": "0.6.2",
     "webpack-dev-server": "2.9.5",
