--- a/package.json
+++ b/package.json
@@ -55,6 +55,10 @@
     "raw-loader": "0.5.1",
     "react-test-renderer": "16.2.0",
     "style-loader": "0.19.0",
+    "tslint": "5.8.0",
+    "tslint-config-prettier": "1.6.0",
+    "tslint-eslint-rules": "4.1.1",
+    "tslint-react": "3.2.0",
     "typescript": "2.6.2",
     "webpack": "3.9.1",
     "webpack-chrome-extension-reloader": "0.6.2",
