--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "enzyme-to-json": "3.2.2",
     "eslint": "4.12.1",
     "eslint-config-airbnb": "16.1.0",
+    "eslint-config-prettier": "2.9.0",
     "eslint-import-resolver-webpack": "0.8.3",
     "eslint-loader": "1.9.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jest": "21.3.2",
     "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-prettier": "2.3.1",
     "eslint-plugin-react": "7.5.1",
     "extract-text-webpack-plugin": "3.0.2",
     "fork-ts-checker-webpack-plugin": "0.2.9",
