--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@babel/preset-typescript": "7.0.0-beta.35",
     "@types/chrome": "0.0.55",
     "autoprefixer": "7.2.3",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "21.2.0",
     "babel-loader": "8.0.0-beta.0",
     "babel-plugin-react-css-modules": "3.3.2",
     "core-js": "2.5.3",
