--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-stage-2": "7.0.0-beta.35",
     "@babel/preset-typescript": "7.0.0-beta.35",
     "@types/chrome": "0.0.55",
+    "@types/jest": "21.1.8",
     "autoprefixer": "7.2.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "21.2.0",
