--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "instantsearch-devtools",
   "version": "1.0.0",
-  "description": "Wepack React with Babel, CSS Modules, ESLint, Jest, Enzyme",
+  "description": "DevTools for the InstantSearch libraries",
   "scripts": {
     "clean": "rm -rf dist",
     "prepare": "mkdir -p dist",
