--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "paths": {
+      "test/*": ["./test"]
+    }
   }
 }
