--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@babel/preset-typescript": "7.0.0-beta.39",
     "@types/chrome": "0.0.59",
     "@types/jest": "22.1.1",
+    "@types/react": "16.0.34",
+    "@types/react-dom": "16.0.3",
     "autoprefixer": "7.2.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "22.1.0",
