--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "clean": "rm -rf dist",
     "prepare": "mkdir -p dist",
-    "start:extension": "yarn clean && yarn prepare && yarn manifest && webpack-dev-server --inline --no-info",
-    "start:example": "cd example && yarn start",
-    "build": "yarn clean && yarn prepare && yarn manifest && NODE_ENV=production webpack",
-    "manifest": "cp src/manifest.json dist/manifest.json",
+    "start:iframe": "webpack-dev-server --config=src/shells/iframe/webpack.config.js",
+    "start:extension:application": "echo 'Should be updated...'; exit 0;",
+    "start:extension:example": "webpack-dev-server --config=example/webpack.config.js",
+    "build": "echo 'Should be updated...'; exit 0;",
+    "manifest": "echo 'Should be updated...'; exit 0;",
     "test": "tsc --noEmit && jest",
     "test:watch": "jest --watch"
   },
@@ -33,8 +34,6 @@
     "@types/jest": "22.0.1",
     "@types/react": "16.0.34",
     "@types/react-dom": "16.0.3",
-    "algoliasearch": "3.24.9",
-    "algoliasearch-helper": "2.23.2",
     "autoprefixer": "7.2.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "22.1.0",
@@ -80,6 +79,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.0.0-beta.39",
+    "algoliasearch": "3.24.9",
+    "algoliasearch-helper": "2.23.2",
     "luxon": "0.4.0",
     "prop-types": "15.6.0",
     "react": "16.2.0",
