--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "baseUrl": ".",
     "paths": {
       "test/*": ["./test"]
-    }
+    },
+    "typeRoots": [
+      "./node_modules/@types",
+      "./typings"
+    ]
   }
 }
