chore: avoid to use local RIS use clone version

--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@babel/preset-typescript": "7.0.0-beta.39",
     "@types/algoliasearch": "3.24.7",
     "@types/chrome": "0.0.59",
-    "@types/jest": "22.1.1",
     "@types/jest": "22.0.1",
     "@types/react": "16.0.34",
     "@types/react-dom": "16.0.3",
@@ -81,11 +80,11 @@
     "@babel/polyfill": "7.0.0-beta.39",
     "algoliasearch": "3.24.9",
     "algoliasearch-helper": "2.23.2",
+    "flufykin": "4.5.2",
     "luxon": "0.4.0",
     "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "react-instantsearch": "file:/Users/samuelvaillant/Work/custom-helper-react-instantsearch/packages/react-instantsearch/dist",
     "react-json-tree": "0.11.0",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
