chore: use theme from NPM

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
+    "react-instantsearch-theme-algolia": "4.5.1",
     "react-json-tree": "0.11.0",
     "react-redux": "5.0.7",
     "redux": "3.7.2",
