--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,5 @@
 {
   "extends": ["config:base"],
-  "ignoreDeps": ["react-instantsearch"]
+  "ignoreDeps": ["react-instantsearch"],
+  "automerge": true
 }
