chore: remove useless dependencies

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jest": "23.0.2",
     "@types/react": "16.3.2",
     "@types/react-dom": "16.0.6",
+    "@types/uuid": "3.4.3",
     "autoprefixer": "8.6.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.0.1",
@@ -88,9 +89,6 @@
     "react-dom": "16.4.0",
     "react-instantsearch-theme-algolia": "4.5.2",
     "react-json-tree": "0.11.0",
-    "react-redux": "5.0.7",
-    "redux": "4.0.0",
-    "redux-logger": "3.0.6",
     "uuid": "3.2.1"
   },
   "browserslist": [
