--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/chrome": "0.0.69",
     "@types/jest": "23.1.2",
     "@types/react": "16.3.2",
+    "@types/react-css-modules": "4.6.1",
     "@types/react-dom": "16.0.6",
     "@types/uuid": "3.4.3",
     "autoprefixer": "8.6.4",
