--- a/package.json
+++ b/package.json
@@ -29,18 +29,22 @@
     "@babel/preset-react": "7.0.0-beta.51",
     "@babel/preset-stage-2": "7.0.0-beta.51",
     "@babel/preset-typescript": "7.0.0-beta.51",
-    "@types/algoliasearch": "3.27.4",
-    "@types/chrome": "0.0.69",
-    "@types/jest": "23.1.2",
-    "@types/react": "16.3.2",
-    "@types/react-css-modules": "4.6.1",
-    "@types/react-dom": "16.0.6",
-    "@types/uuid": "3.4.3",
+    "@types/algoliasearch": "^3.27.4",
+    "@types/chrome": "^0.0.69",
+    "@types/classnames": "^2.2.4",
+    "@types/enzyme": "^3.1.11",
+    "@types/enzyme-adapter-react-16": "^1.0.2",
+    "@types/jest": "^23.1.2",
+    "@types/react": "^16.4.2",
+    "@types/react-css-modules": "^4.6.1",
+    "@types/react-dom": "^16.0.6",
+    "@types/uuid": "^3.4.3",
     "autoprefixer": "8.6.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.2.0",
     "babel-loader": "8.0.0-beta.4",
     "babel-plugin-react-css-modules": "3.4.2",
+    "classnames": "2.2.6",
     "core-js": "2.5.7",
     "css-loader": "0.28.11",
     "enzyme": "3.3.0",
@@ -83,6 +87,7 @@
     "@babel/polyfill": "7.0.0-beta.51",
     "algoliasearch": "3.29.0",
     "algoliasearch-helper": "2.26.1",
+    "date-fns": "1.29.0",
     "flufykin": "4.5.3",
     "luxon": "1.3.0",
     "prop-types": "15.6.2",
