--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "html-webpack-plugin": "3.2.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.2.0",
+    "jest-watch-typeahead": "^0.1.0",
     "postcss-loader": "2.1.5",
     "postcss-nested": "3.0.0",
     "prettier": "1.13.6",
