--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react": "^16.4.2",
     "@types/react-css-modules": "^4.6.1",
     "@types/react-dom": "^16.0.6",
+    "@types/react-json-tree": "^0.6.7",
     "@types/uuid": "^3.4.3",
     "autoprefixer": "8.6.4",
     "babel-core": "7.0.0-bridge.0",
