--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/enzyme": "^3.1.11",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^23.1.2",
+    "@types/lodash-es": "^4.17.0",
     "@types/react": "^16.4.2",
     "@types/react-css-modules": "^4.6.1",
     "@types/react-dom": "^16.0.6",
@@ -91,6 +92,7 @@
     "algoliasearch-helper": "2.26.1",
     "date-fns": "1.29.0",
     "flufykin": "4.5.3",
+    "lodash-es": "4.17.10",
     "prop-types": "15.6.2",
     "react": "16.4.1",
     "react-dom": "16.4.1",
